--- a/.github/workflows/flux-test.yml
+++ b/.github/workflows/flux-test.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: lmangani/flux-github-action@use-latest-ghcr
-    - run: curl localhost:8086 -sS
+    - run: curl http://127.0.0.1:8086
     - run: |
-        curl -XPOST localhost:8086/api/v2/query -sS \
+        curl -XPOST http://127.0.0.1:8086/api/v2/query -sS \
         -H 'Accept:application/csv' \
         -H 'Content-type:application/vnd.flux' \
         -d 'import "array" import "runtime" array.from(rows: [{version: runtime.version()}])'
