--- a/.github/workflows/flux-test.yml
+++ b/.github/workflows/flux-test.yml
@@ -7,13 +7,11 @@ jobs:
   fluxpipe:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
     - name: Set up Fluxpipe
       uses: lmangani/flux-github-action@use-latest-ghcr
     - name: Run Flux Query
       run: |
-        curl -XPOST http://localhost:8086/api/v2/query -sS \
+        curl -XPOST localhost:8086/api/v2/query -sS \
         -H 'Accept:application/csv' \
         -H 'Content-type:application/vnd.flux' \
         -d 'import "array" import "runtime" array.from(rows: [{version: runtime.version()}])'
