--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,18 @@
-name: 'Flux in GitHub Actions'
-description: 'Start a Fluxpipe Server'
-
+name: 'Flux Scripts in GitHub Actions'
+description: 'Execute a Fluxpipe Script'
 branding:
   icon: 'database'
   color: 'yellow'
-
+inputs:
+  flux-script:
+    description: 'Flux Script'
+    required: true
+    default: 'import "array" import "runtime" array.from(rows: [{version: runtime.version()}])'
+outputs:
+  result:
+    description: 'Flux Output'
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  args:
+    - ${{ inputs.flux-script }}
