--- a/.github/workflows/flux-test.yml
+++ b/.github/workflows/flux-test.yml
@@ -6,12 +6,12 @@ on:
 jobs:
   fluxpipe:
     runs-on: ubuntu-latest
+    name: Run a Flux Script
     steps:
-    - name: Set up Fluxpipe
-      uses: lmangani/flux-github-action@use-latest-ghcr
-    - name: Run Flux Query
-      run: |
-        curl -XPOST localhost:8086/api/v2/query -sS \
-        -H 'Accept:application/csv' \
-        -H 'Content-type:application/vnd.flux' \
-        -d 'import "array" import "runtime" array.from(rows: [{version: runtime.version()}])'
+      - name: Flux Run
+        id: flux
+        uses: lmangani/flux-github-action@use-latest-ghcr
+        with:
+          flux-script: 'import "array" import "runtime" array.from(rows: [{version: runtime.version()}])'
+      - name: Flux Result
+        run: echo "${{ steps.flux.outputs.result }}"
